# trading-rl-core

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: config.yaml  print_tree.py  runner.py  train.py
tests/: test_alpaca_loader.py  test_baselines.py  test_data_pipeline.py  test_eval_metrics.py  test_experiment_config.py  test_hyperparams.py  test_indicators.py  test_loader.py  test_regimes.py  test_registry.py  test_runner_utils.py  test_serialization.py  test_stability_suite.py  test_trading_env.py  test_windowed_env.py
trading_rl/: registry.py
trading_rl/baselines/: baselines.py
trading_rl/callbacks/: eval_callback.py  wandb_callback.py
trading_rl/config/: hyperparams.py  regimes.yaml  sb3_finance_hyperparams.yaml
trading_rl/data/: alpaca_loader.py  indicators.py  loader.py
trading_rl/envs/: trading_env.py  windowed_wrapper.py
trading_rl/experiment/: artifacts.py  config.py  data_pipeline.py  orchestrator.py  regimes.py  serialization.py
